--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,11 +54,12 @@ dependencies {
     annotationProcessor("androidx.room:room-compiler:2.3.0")
     kapt("androidx.room:room-compiler:2.3.0")
     implementation("androidx.room:room-rxjava3:2.3.0")
-    implementation "com.google.dagger:hilt-android:2.28-alpha"
+    implementation "com.google.dagger:hilt-android:2.31-alpha"
     kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0")
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
+    implementation("androidx.room:room-ktx:2.3.0")
 
 
 }
