--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
 
     <application
         android:allowBackup="true"
+        android:requestLegacyExternalStorage="true"
+        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -16,6 +18,7 @@
         <activity android:name=".Zerg.ZergRecyclerView"/>
         <activity android:name=".Protos.ProtosRecyclerView"/>
         <activity android:name=".Terran.TerranRecyclerView"/>
+        <activity android:name=".Terran.Terran"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
